force-app/main/default/objects/rh2__PS_Rollup_Conditions__c/rh2__PS_Rollup_Conditions__c.object-meta.xml
<CustomObject>
    <description>Used as filter criteria for a rollup defined with Rollup Helper</description>
    <label>Describe</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Rollup Conditions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Describes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>