force-app/main/default/objects/rh2__PS_Rollup_Conditions__c/fields/rh2__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>rh2__Field_Type__c</fullName>
    <label>zDeprecated</label>
    <length>30</length>
    <type>Text</type>
</CustomField>