force-app/main/default/objects/rh2__PS_Rollup_Conditions__c/fields/rh2__Test_Account__c.field-meta.xml
<CustomField>
    <fullName>rh2__Test_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Rollup_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>