force-app/main/default/objects/rh2__PS_Rollup_Conditions__c/fields/rh2__Test_Describe__c.field-meta.xml
<CustomField>
    <fullName>rh2__Test_Describe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Describe</label>
    <referenceTo>rh2__PS_Describe__c</referenceTo>
    <relationshipName>Rollup_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>