force-app/main/default/objects/rh2__PS_Rollup_Conditions__c/fields/rh2__XRef__c.field-meta.xml
<CustomField>
    <fullName>rh2__XRef__c</fullName>
    <description>Reference to rollup helper setting.</description>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>